[gd_scene load_steps=6 format=3 uid="uid://e1b4i6m040jv"]

[ext_resource type="Shader" uid="uid://dhcwooedjvdjv" path="res://assets/shaders/card.gdshader" id="1_plp28"]
[ext_resource type="Script" uid="uid://c2wxl817aryy7" path="res://assets/collectables/card_item.gd" id="2_g73bm"]
[ext_resource type="Texture2D" uid="uid://5oyfotc2ncji" path="res://assets/collectables/hover_card.png" id="4_plp28"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1f1f"]
resource_local_to_scene = true
shader = ExtResource("1_plp28")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plp28"]
resource_local_to_scene = true

[node name="CardItem" type="TextureButton"]
material = SubResource("ShaderMaterial_d1f1f")
use_parent_material = true
offset_right = 116.0
offset_bottom = 178.0
size_flags_horizontal = 4
button_mask = 3
script = ExtResource("2_g73bm")

[node name="ItemWord" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.9411765, 0.9647059, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
theme_override_colors/font_shadow_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "BINGO WORD"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HoverTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.13333334, 0.13725491, 0.13725491, 1)
show_behind_parent = true
material = SubResource("ShaderMaterial_plp28")
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 118.0
offset_bottom = 180.0
mouse_filter = 2
texture = ExtResource("4_plp28")

[node name="Stack" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 155.0
offset_right = 116.0
offset_bottom = 178.0
size_flags_vertical = 8
mouse_filter = 2
theme_override_colors/default_color = Color(0.9411765, 0.9647059, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
theme_override_colors/font_shadow_color = Color(0.13333334, 0.13725491, 0.13725491, 1)
bbcode_enabled = true
text = "x1"
fit_content = true
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
